--- a/TripplePlay/app/src/main/res/values/strings.xml
+++ b/TripplePlay/app/src/main/res/values/strings.xml
@@ -4,4 +4,12 @@
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="next">Next</string>
+    <string name="noose0IMG">noose0</string>
+    <string name="noose1IMG">noose1</string>
+    <string name="noose2IMG">noose2</string>
+    <string name="noose3IMG">noose3</string>
+    <string name="noose4IMG">noose4</string>
+    <string name="noose5IMG">noose5</string>
+    <string name="noose6IMG">noose6</string>
+    <string name="noose6IMG">noose6</string>
 </resources>
