Have input text
Implimented a dialog that allows the user to input a word to guess, then that word will be used to generate the amount of guess spaces visible (WIP), then the guess button will activate the guess() method and if the letter is not found the hangman fragment will switch to the next fragment (WIP). Also working to finish win condition, reset, and loss condition (WIP)

--- a/TripplePlay/app/src/main/res/values/strings.xml
+++ b/TripplePlay/app/src/main/res/values/strings.xml
@@ -20,4 +20,5 @@
     <string name="guessSpace2TV">_</string>
     <string name="guessSpace3TV">_</string>
     <string name="guessSpace4TV">_</string>
+    <string name="guessWord_hint">Hang the man with one word</string>
 </resources>
