So much closer with the guess TextView

--- a/TripplePlay/app/src/main/res/values/strings.xml
+++ b/TripplePlay/app/src/main/res/values/strings.xml
@@ -21,4 +21,5 @@
     <string name="guessSpace3TV">_</string>
     <string name="guessSpace4TV">_</string>
     <string name="guessWord_hint">Hang the man with one word</string>
+    <string name="spaceTV">_</string>
 </resources>
