--- a/TripplePlay/app/src/main/res/values/strings.xml
+++ b/TripplePlay/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">TripplePlay</string>
+    <string name="app_name">triPPlePlay</string>
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
@@ -19,4 +19,5 @@
     <string name="spaceTV">_</string>
     <string name="resetBTN">Reset</string>
     <string name="scoreresetBTN">RESET</string>
+    <string name="tripple_play_titleTV">triPPle Play</string>
 </resources>
